# TARS-recommender-service-template

./: .coverage  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: settings.py
src/app/: main.py
src/app/config/: default.yaml
src/app/model/: model_schema.py  recommender.py
src/app/utils/: art.py  auth.py
src/art/: tars_text.txt
tests/: test_art.py  test_auth.py  test_main.py  test_recommender.py
